google-analytics-prueba

--- a/app/pages/background.html
+++ b/app/pages/background.html
@@ -1,4 +1,10 @@
 <textarea id="temp"></textarea>
 <script src="../scripts/oauth2.js"></script>
-<!--<script src="../scripts/mendeley.js"></script>-->
-<script src="../scripts/background.js"></script>
+
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VE0HMBF0JL');
+</script>
