--- a/app/pages/options.html
+++ b/app/pages/options.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="../scripts/jquery.min.js">
-  </script>
+  <script src="../scripts/jquery.min.js"> </script>
+
   <title>FRAMEndeley options</title>
   <link rel="stylesheet" type="text/css" href="../styles/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="../styles/bootstrap-slider.min.css">
@@ -116,6 +116,9 @@
     </div>
     <br/>
     <br/>
+
+
+
     Developed by <a href="http://onekin.org/">Onekin Web Engineering Research Group</a> |
     <a href="http://onekin.org/portal/content/privacy-policy">Privacy policy</a> |
     <a href="mailto:jeremias.perez@ehu.eus,oscar.diaz@ehu.eus?subject=FRAMEndeley - Contact">Contact</a>
@@ -128,5 +131,6 @@
 </script>
 <script src="../scripts/options.js">
 </script>
+
 </body>
 </html>
