--- a/app/pages/helpDialog.html
+++ b/app/pages/helpDialog.html
@@ -1,6 +1,8 @@
-
 <div id="FRAMEndeleyHelpDialogContent">
   If you have any problem or comment please don't hesitate to
   <a if="FRAMEndeleyHelpDialogContactLink" href="mailto:jeremias.perez@ehu.eus,oscar.diaz@ehu.eus?subject=FRAMEndeley assistance">contact us</a>
   at jeremias.perez@ehu.eus or oscar.diaz@ehu.eus.
+
+  <button id='button1' >Button 1</button>
+
 </div>
